--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.5.2
 Django==3.2.14
+drf-yasg==1.20.0
 pytz==2022.1
 sqlparse==0.4.2
-asgiref==3.5.2
-Django==3.2.14
 djangorestframework==3.13.1
 pytz==2022.1
 rest-framework-generic-relations==2.1.0
 sqlparse==0.4.2
+celery==5.2.7
+flower==1.1.0
+prompt-toolkit==3.0.30
+redis==4.3.4
+python-dotenv==0.20.0
+psycopg2-binary==2.9.3
